@@ -51,7 +51,7 @@ if ($config['poller_id'] > 1 && $config['connection'] == 'online') {
 }
 
 if (!remote_client_authorized()) {
-	print 'FATAL: You are not authorized to use this service';
+	print 'FATAL: Client authorization failed.  You are not authorized to use this service';
 	exit;
 }
 
@@ -130,11 +130,15 @@ function remote_agent_strip_domain($host) {
 }
 
 function remote_client_authorized() {
-	global $poller_db_cnn_id;
+	global $config, $poller_db_cnn_id;
 
 	/* don't allow to run from the command line */
 	$client_addr = get_client_addr();
 	if ($client_addr === false) {
+		return false;
+	}
+
+	if ($config['poller_id'] == 1) {
 		return false;
 	}
 
@@ -151,9 +155,9 @@ function remote_client_authorized() {
 		$client_name = remote_agent_strip_domain($client_name);
 	}
 
-	$pollers = db_fetch_assoc('SELECT * FROM poller', true, $poller_db_cnn_id);
+	$pollers = db_fetch_assoc('SELECT * FROM poller WHERE disabled = ""', true, $poller_db_cnn_id);
 
-	if (cacti_sizeof($pollers)) {
+	if (cacti_sizeof($pollers) > 1) {
 		foreach($pollers as $poller) {
 			if (remote_agent_strip_domain($poller['hostname']) == $client_name) {
 				return true;
